--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,12 @@
+$font-stack: Helvetica, sans-serif;
+$primary-color: #333;
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  .App-logo {
+    height: 40vmin;
+    pointer-events: none;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
