--- a/src/components/SocialMediaButton/SocialMediaButton.scss
+++ b/src/components/SocialMediaButton/SocialMediaButton.scss
@@ -7,13 +7,15 @@
   padding: 0px 30px;
   border-radius: 25px;
   box-shadow: 0px 3px 6px lighten($light-grey-color, 15%);
+  display: flex;
+  justify-content: center;
   &:hover{
       cursor: pointer;
       background-color: darken($white-color, 2%);
   }
   img {
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
     margin-right: 15px;
   }
 }
