--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -20,6 +20,13 @@ $invalid-color: #ec3b3b;
   margin: 0px;
 }
 
+%displayFlex {
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;
+}
+
 @mixin marginVertical($value) {
   margin-top: $value;
   margin-bottom: $value;
