Adding transition style to CustomInput

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -27,6 +27,12 @@ $invalid-color: #ec3b3b;
   display: flex;
 }
 
+@mixin transform($value) {
+  -webkit-transform: $value; /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
+  -ms-transform: $value; /* IE 9 */
+  transform: $value; /* IE 10, Fx 16+, Op 12.1+ */
+}
+
 @mixin marginVertical($value) {
   margin-top: $value;
   margin-bottom: $value;
